--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(AVL_tree_v2 main.cpp
         BTreeNode.h BTreeNode.cpp
         BTree.h BTree.cpp
         LinkedHashEntry.h LinkedHashEntry.cpp
-        HashMap.h HashMap.h)
+        LinkedList.h LinkedList_impl.h
+        HashMap.h HashMap.cpp)
